--- a/package/nfs/Dockerfile
+++ b/package/nfs/Dockerfile
@@ -1,3 +1,3 @@
 FROM rancher/storage-nfs:v0.9.0
-COPY nfs/rancher-nfs common/* /usr/bin/
+COPY ./rancher-nfs common/* /usr/bin/
 CMD ["start.sh", "storage", "--driver-name", "rancher-nfs"]
